static/css/index.css
@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,700';

body {
	background: #0d0d26;
	color: #fff;
	font-family: 'Open Sans', sans-serif;
	font-size: 16px;
}

div.home-header {
	background: url("../img/aaacec.jpg") no-repeat;
	background-size: cover;
	height: 100%;
}

div.home-header > div.gradient-overlay {
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.35);
	background: -moz-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(13,13,38,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0.35)), color-stop(100%, rgba(13,13,38,1)));
	background: -webkit-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(13,13,38,1) 100%);
	background: -o-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(13,13,38,1) 100%);
	background: -ms-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(13,13,38,1) 100%);
}

@font-face {
  font-family: 'Nexa';
  src:  url('../fonts/NexaLight.otf') format('woff2'),
        url('../fonts/NexaLight.otf') format('woff');
}

@font-face {
  font-family: 'Nexa';
  src:  url('../fonts/NexaBold.otf') format('woff2'),
        url('../fonts/NexaBold.otf') format('woff');
  font-weight: bold;
}

.home-header .title {
	text-align: center;
	color: #fff;
	padding: 2em 1.5em 0.5em;
    font-size: 50px;
	font-family: 'Nexa', Helvetica, sans-serif;
}

.home-header .description {
    text-align: center;
    color: #fff;
    padding: 0.5em 1.5em 3em;
        font-family: 'Open Sans';
}

.content {
    text-align: left;
    color: #fff;
    padding: 1.5em 2.7em;
    font-family: 'Open Sans';
}

.content .column {
    text-align: left;
    color: #fff;
    padding: 2em 0em;
    font-family: 'Nexa', Helvetica, sans-serif;
}

.content .column .calendar-box {
    width: 400px;
    margin: 1em 0em;
    border: 3px solid #fff;
}

ul.calendar {
    display: inline-block;
    padding: 2em;
    font-size: 1.2em;
    font-family: 'Open Sans';
}

ul.calendar li {
    display: block;
    padding: 0em 0em 1.5em;
}

h1,
h2,
h3,
h4 {
	font-family: 'Nexa', Helvetica, sans-serif;
}

.align-right {
	text-align: right;
}

footer {
	border-top: 1px solid white;
	margin: 3em;
}

footer > div {
	padding: 2em 0;
}

footer a {
	font-weight: bold;
	color: #fff;
}

footer a:hover {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.75);
}

